# GT-1000PILOT

./: README.md  icon.icns  pyinstaller.sh  pyproject.toml  requirements.txt  tone-studio-full-traffic.txt
.github/workflows/: packaging.yml
gt1000pilot/: app.py  callbacks.py  shared.py
gt1000pilot/pages/: chorus.py  comp.py  delay.py  dist.py  eq.py  fx.py  mstDelay.py  ns.py  pages_common.py  pedalFx.py  preamp.py  reverb.py
packaging/: launch.py  pyinstaller.sh
scripts/: options-to-json.py  spec-to-json.py
src/dashboard/: app.py  callbacks.py  dump.py  shared.py
src/dashboard/assets/: resize.js
src/dashboard/gt_1000/: constants.py  gt1000.py
src/dashboard/gt_1000/specs/: Patch.json  Patch.txt  Patch2.json  Patch2.txt  Patch3.json  Patch3.txt  PatchChorus.json  PatchChorus.txt  PatchComp.json  PatchComp.txt  PatchDelay.json  PatchDelay.txt  PatchDist.json  PatchDist.txt  PatchEq.json  PatchEq.txt  PatchFx.json  PatchFx.txt  PatchFxAGSim.json  PatchFxAGSim.txt  PatchFxAWah.json  PatchFxAWah.txt  PatchFxAcReso.json  PatchFxAcReso.txt  PatchFxCVibe.json  PatchFxCVibe.txt  PatchFxChorus.json  PatchFxChorus.txt  PatchFxChorusBass.json  PatchFxChorusBass.txt  PatchFxComp.json  PatchFxComp.txt  PatchFxDefretter.json  PatchFxDefretter.txt  PatchFxDefretterBass.json  PatchFxDefretterBass.txt  PatchFxDist.json  PatchFxDist.txt  PatchFxFeedbacker.json  PatchFxFeedbacker.txt  (+57 more)
src/dashboard/pages/: analytics.py  archive.py  chorus.py  comp.py  delay.py  dist.py  eq.py  fx.py  home.py  mstDelay.py  ns.py  pages_common.py  pedalFx.py  preamp.py
