[tool.poetry]
name = "GT-1000PILOT"
version = "0.1.3"
description = ""
authors = ["Julien Desfossez <j@jdfz.org>"]
license = "GPLv2"
readme = "README.md"
repository = "https://github.com/jdesfossez/GT-1000PILOT"
packages = [{include = "gt1000pilot"}]

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.17.1"
python-rtmidi = "^1.5.8"
dash-bootstrap-components = "^1.6.0"
pygt1000 = "^0.1.5"

[tool.poetry.group.dev.dependencies]
python-lsp-server = "^1.11.0"
pylsp-mypy = "^0.6.8"
python-lsp-ruff = "^2.2.2"
ruff = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
